# market_forecaster_on_railway

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  Concept to Code.md  EVALUATOR_GUIDE.md  GOVERNANCE_REPORT.md  Geopolitical Market Forecaster.md  IMPLEMENTATION_PLAN.md  PROMPT_ACTION_LOG.md  TOOLING.md  project1_demo.odp
scripts/: run_dashboard.sh
src/geopolitical_market_forecaster/: __init__.py  cli.py  config.py  decisions.py  error_logging.py  ingestion.py  main.py  market_data.py  migration.py  models.py  realtime.py  storage.py
src/geopolitical_market_forecaster/agents/: __init__.py  analyst.py  governor.py  predictor.py  scraper.py
src/geopolitical_market_forecaster/orchestration/: pipeline.py
src/geopolitical_market_forecaster/static/: dashboard.css  dashboard.js
src/geopolitical_market_forecaster/templates/: dashboard.html
tests/: test_analyst.py  test_config.py  test_dashboard.py  test_decisions.py  test_governor.py  test_ingestion.py  test_market_data.py  test_migration.py  test_pipeline.py  test_realtime.py  test_storage.py
