[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "geopolitical-market-forecaster"
version = "0.1.0"
description = "AI-driven dashboard for geopolitical market forecasting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "feedparser>=6.0",
    "jinja2>=3.1",
    "psycopg[binary]>=3.2",
    "yfinance>=1.5.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
gmf = "geopolitical_market_forecaster.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geopolitical_market_forecaster = [
    "templates/*.html",
    "static/*.css",
    "static/*.js",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
